trunk/Archive2/ed/4c5074a1ecbdba/output
main.cpp: In function 'int main()':
main.cpp:7:11: error: lvalue required as left operand of assignment
     int() = int();
           ^
